mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  labels:
    name: express
spec:
  replicas: 1
  selector:
    matchLabels:
      name: express
  template:
    metadata:
      labels:
        name: express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    name: express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
